# arline

./: .gitmodules  CMakeLists.txt  LICENSE
arline/: Arline.cxx  Arline.hpp  Arline.hxx  ArlineBuffer.cpp  ArlineBuffer.hpp  ArlineCommands.hpp  ArlineCommands.inl  ArlineImage.cpp  ArlineImage.hpp  ArlineImgui.cpp  ArlineImgui.hpp  ArlinePipeline.cpp  ArlinePipeline.hpp  ArlineShader.cpp  ArlineShader.hpp  ArlineTime.hpp  ArlineTypes.hpp  ArlineVkContext.cpp  ArlineVkContext.hpp  ArlineWindow.cpp  ArlineWindow.hpp  arline.c  arline.h  vma.hxx  volk.hxx
arline/vulkan/: vk_platform.h  vulkan.h  vulkan_core.h  vulkan_win32.h  vulkan_xlib.h
examples/: CMakeLists.txt  examples.cmake
examples/1-triangle/: CMakeLists.txt  example.cmake  example.cpp
examples/1-triangle/shaders/: main.vert
examples/2-indexBuffer/: CMakeLists.txt  example.cpp
examples/2-indexBuffer/shaders/: main.vert
examples/3-imGui/: CMakeLists.txt  example.cpp
examples/cube/: CMakeLists.txt  example.cxx  vertices.inl
examples/cube/shaders/: cube.frag  cube.vert  cube.vert.spv  finalImage.frag  finalImage.frag.spv  finalImage.vert  finalImage.vert.spv
examples/engine/: CMakeLists.txt  example.cpp
examples/imGui/: CMakeLists.txt  example.cpp
examples/rectangle/: CMakeLists.txt  example.cpp
examples/rectangle/shaders/: main.frag
examples/rotating-cube/: CMakeLists.txt  example.cxx  shader.inl  vertices.inl
examples/rotating-cube/shaders/: finalImage.frag.spv  finalImage.frag.u32  finalImage.vert.spv  finalImage.vert.u32  main.frag.u32  main.vert  main.vert.spv  main.vert.u32
examples/triangle/: CMakeLists.txt  example.c  example.cpp  example.cxx  shader.inl
examples/triangle/shaders/: main.frag  main.frag.spv  main.frag.u32  main.vert  main.vert.spv  main.vert.u32
